--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,28 +1,14 @@
-image: Ubuntu2204  # образ для сборки
-
-stack: node 20  # окружение
-
-branches:
-  only:
-    - master  # ветка git
-    - main
-
-cache: node_modules  # кеширование
+environment:
+  nodejs_version: "18"  # Укажите нужную версию Node.js
 
 install:
-  - yarn  # команда установки зависимостей
+  - ps: Install-Product node $env:nodejs_version
+  - npm install
 
-build: off  # отключаем встроенную в appveyor систему сборки
-
-build_script:
-  - yarn build   # команда сборки
+build: off
 
 test_script:
-  - yarn lint && yarn test  # скрипт тестирования
+  - npm test
 
-deploy_script:  # скрипт развёртывания
-  - git config --global credential.helper store
-  - git config --global user.name AppVeyor
-  - git config --global user.email ci@appveyor.com
-  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
+build_script:
+  - npm run build
