--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack5",
   "version": "1.0.0",
-  "description": "",
+  "description": "![CI](https://github.com/yuriytuk/ahj-dnd.io/actions/workflows/web.yml/badge.svg)",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
@@ -14,8 +14,11 @@
     "preshow:dist": "npm run build",
     "show:dist": "http-server dist"
   },
+  "engines": {
+    "node": "20.12.0",
+    "npm": ">=10.0.0"
+  },
   "author": "coursar",
-  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.4",
@@ -31,13 +34,25 @@
     "globals": "^15.0.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^3.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0",
-    "http-server": "^14.1.1"
+    "webpack-merge": "^5.10.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yuriytuk/ahj-dnd.io.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yuriytuk/ahj-dnd.io/issues"
+  },
+  "homepage": "https://github.com/yuriytuk/ahj-dnd.io#readme",
+  "dependencies": {
+    "yarn": "^1.22.22"
   }
 }
