--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,14 @@
-version: 1.0.{build}
 environment:
-  token:
-    secure: UuGocukbD9dM5BWalqQg6ALRHbV6uFigodBxd3GBdpvEJqL1Wv8SpCe67xXxPYxR
-  git: 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
+   nodejs_version: "23"  # Укажите нужную версию Node.js
+ 
+install:
+   - ps: Install-Product node $env:nodejs_version
+   - npm install
+ 
+build: off
+ 
+test_script:
+   - npm test
+ 
+build_script:
+   - npm run build
